# SkillsManager

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.en.md  README.md  changeset-status.json  future.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.changeset/: add-rust-cache.md  add-skill-delete.md  collections-feature.md  cross-platform-build.md  export-group-json.md  feat-groups-pagination.md  feat-skills-pagination.md  feat-wildcard-install-and-message.md  fix-build-and-update.md  fix-discovery-page.md  fix-settings-input-and-locale-sync.md  fix-symlink-error-message.md  junction-no-admin-required.md  migrate-cli-targets-i18n.md  nsis-language-support.md  refactor-frontend-src.md  refactor-pagination-i18n.md  settings-update.md  skill-source-tracking.md  skills-filter-by-source.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_project_only_refactor.sql  0003_skill_source_tracking.sql  0004_collections.sql
src-tauri/src/: app_paths.rs  cli_targets.rs  collections.rs  custom_directories.rs  db.rs  desktop.rs  file_import.rs  fs_links.rs  http.rs  install.rs  junction_test.rs  lib.rs  locales.rs  main.rs  migration.rs  project_cli_targets.rs  project_groups.rs  project_skills.rs  projects.rs  reconcile.rs  remote_discovery.rs  repository_sources.rs  settings.rs  skill_files.rs  skill_groups.rs  skill_updates.rs  skills.rs  updater.rs
src-tauri/src/domain/: ids.rs  links.rs  mod.rs  project.rs  skill.rs  targets.rs
(+158 files in other folders)
